fixed ordering issue of chat messages, added css and styled scrollbar. fixed spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,20 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 .App{
   width: 100%;
   height: 100%;
+  font-family: 'Montserrat', sans-serif;
 }
+
 .header{
-  background-color: lightgrey;
+  background-color: #1b1f23;
   min-height: 100px;
   display: flex;
   justify-content: space-between;
   padding-left: 2%;;
   padding-right: 2%;
+  
+  color: white;
 }
 /* html, body {
 	height: 100%;
@@ -22,15 +27,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-weight: bolder;
 }
 .container{
   display: flex;
   flex-direction: row;
   height: 86vh;
+  color: white;
 }
 
 .chatList{
-background-color: pink;
+background-color: #25292d;
 flex:1;
 display:flex;
 flex-direction: column;
@@ -41,19 +48,27 @@ flex-direction: column;
 flex:3;
 display: flex;
 flex-direction: column;
+background-color: #393d41;
+
 }
 
 .checkListItem{
   padding: 2%;
-  border: 1px solid #e5e5ea;
+  border: 1px solid #2C3639;
 height: 80px;
+/* width: 95%; */
 display: flex;
 flex-direction: row;
-margin-bottom: 5px;
+margin: 5px;
+border-radius: 10px;
 }
 
 .checkListItem__name{
   margin: 10px;
+}
+
+.currentChatUser{
+  background-color: #2f3337;
 }
 
 
@@ -61,16 +76,23 @@ margin-bottom: 5px;
 .chat__meassages{
   flex:6;
 
-  background-color: #fff;
-  border: 1px solid #e5e5ea;
+  background-color: #393d41;
+  border: 1px solid #393d41;
   border-radius: 0.25rem;
   display: flex;
   flex-direction: column;
   font-family: "SanFrancisco";
   font-size: 1.25rem;
   margin: 0 auto 1rem;
-  width: 800px;
+  width: 95%;
   padding: 0.5rem 1.5rem;
+  
+  
+
+ 
+  height: 150px;
+  overflow-x: hidden;
+  overflow-y: auto;
   
 
 
@@ -88,7 +110,7 @@ margin-bottom: 5px;
   flex-direction: row;
   height: 30px;
   justify-content: space-around;
-  background-color: aliceblue;
+  background-color: #43474b;
   height: 50px;
 
 }
@@ -98,8 +120,23 @@ flex: 9;
 display: flex;
 justify-content: center;
 align-items: center;
+background-color: #43474b;
 
 }
+
+.chat__form_input input{
+  height: 70%;
+  width: 90%;
+  border-radius:  8px; 
+  border: 1px solid #43474b;
+  background-color: #43474b;
+  color: white;
+  font-size: 1.5em;
+}
+.chat__form_input input:focus{
+  outline: none;
+}
+
 
 .chat__form__button{
   flex :1;
@@ -109,15 +146,11 @@ align-items: center;
   }
   .chat__form__button button{
     border: none;
-    }
+    background-color: #43474b;
+  
+  }
 
-.chat__form_input input{
-  height: 70%;
-  width: 90%;
-  border-radius:  8px; 
-  border: 1px solid #e5e5ea;
-  background-color: aliceblue;
-}
+
 
 
 .chat__meassages p {
@@ -127,16 +160,37 @@ align-items: center;
   padding: 0.5rem .875rem;
   position: relative;
   word-wrap: break-word;
+  
 }
 
 p.from-me {
   align-self: flex-end;
-  background-color: #248bf5;
+  background-color: #43474b;
   color: #fff; 
 }
 
 p.from-them {
   align-items: flex-start;
-  background-color: #e5e5ea;
-  color: #000;
+  background-color: #43474b;
+  color: #fff;
+  width: fit-content;
 }
+
+.chat__meassages::-webkit-scrollbar {
+  width: 12px;               
+  background: #1b1f23;
+	height: 100%;
+	overflow: auto;
+	-webkit-overflow-scrolling: touch;
+}
+
+/* .chat__meassages::-webkit-scrollbar-track {
+} */
+
+.chat__meassages::-webkit-scrollbar-thumb {
+  background-color: #25292d;    
+  border-radius: 20px;      
+  border: 3px solid 2C3639;  
+}
+
+
